# rust-homework-3

./: .gitignore  Cargo.toml  example.bf  marking.md  unbalanced2.bf
.github/workflows/: ci.yml
benches/: benchmarks.rs  fib.bf
bft_interp/: Cargo.toml
bft_interp/src/: lib.rs  vm.rs  vm_builder.rs  vm_error.rs  vm_iterator.rs
bft_interp/src/builder/: mod.rs
bft_interp/src/core/: mod.rs
bft_interp/src/error/: mod.rs
bft_test_utils/: Cargo.toml
bft_test_utils/src/: lib.rs
bft_types/: Cargo.toml
bft_types/src/: bf_instructions.rs  bf_program.rs  lib.rs  vm_state.rs
bft_types/src/cellkind/: mod.rs
bft_types/src/instructions/: mod.rs
bft_types/src/program/: mod.rs
bft_types/src/state/: mod.rs
src/: cli.rs  main.rs
src/cli/: mod.rs
test_programs/: fixed_memory.bf  test-final-state.bf  unbalanced.bf
