[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bft_interp = { path = "./bft_interp" }
bft_types = { path = "./bft_types" }
clap = { version = "4.5.0", features = ["derive"] }
tempfile = "3.10.0"

[workspace]
members = ["bft_interp", "bft_types"]
