[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = "0.6.5"
bft_interp = { path = "./bft_interp" }
bft_types = { path = "./bft_types" }
# TODO: add the env feature to clap
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"

[workspace]
members = ["bft_interp", "bft_types"]

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.10.0"

[[bench]]
name = "benchmarks"
harness = false
